objects/Gong__Gong_Call__c.object
<CustomObject>
    <fields>
        <fullName>Gong__Call_Duration__c</fullName>
        <formula>IF( Gong__Call_Duration_sec__c &gt;=3600,  TEXT(FLOOR(Gong__Call_Duration_sec__c / 3600))&amp;&quot;:&quot; , &quot;&quot;)
&amp; 
TEXT(FLOOR(MOD(Gong__Call_Duration_sec__c,3600)/600)) &amp; 
TEXT(FLOOR(MOD(Gong__Call_Duration_sec__c,600)  / 60))
&amp; &quot;:&quot; &amp;
TEXT(FLOOR(MOD(Gong__Call_Duration_sec__c,60)/10)) &amp; 
TEXT(FLOOR(MOD(Gong__Call_Duration_sec__c,10)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration (Min.)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Call_Duration_sec__c</fullName>
        <label>Duration (Sec.)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gong__Call_End__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ended</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Gong__Call_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Gong ID</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Call_Score__c</fullName>
        <label>Score</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gong__Call_Start__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Gong__Direction__c</fullName>
        <label>Direction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gong__Gong_Count__c</fullName>
        <description>Auto computed field that is used in reports for aggregations.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto computed field that is used in reports for aggregations.</inlineHelpText>
        <label>Gong Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gong__Language__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Media__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Media</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Opp_Amount_Time_of_Call__c</fullName>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gong__Opp_Close_Date_Time_Of_Call__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gong__Opp_Forecast_Category_Time_Of_Call__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Opportunity Forecast Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Opp_Probability_Time_Of_Call__c</fullName>
        <label>Opportunity Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gong__Opp_Stage_Time_Of_Call__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Opportunity Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Opportunity_Stage_Now__c</fullName>
        <formula>IF( ISBLANK( Gong__Primary_Opportunity__c ) , &apos;&apos;,  TEXT(Gong__Primary_Opportunity__r.StageName ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage Now</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Participants_Emails__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Participants Emails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Playbook_match__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Playbook match</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Pricing_Duration__c</fullName>
        <label>Pricing Duration</label>
        <summarizedField>Gong__Topic__c.Gong__Topic_Duration_Sec__c</summarizedField>
        <summaryFilterItems>
            <field>Gong__Topic__c.Name</field>
            <operation>equals</operation>
            <value>Pricing</value>
        </summaryFilterItems>
        <summaryForeignKey>Gong__Topic__c.Gong__Gong_Interaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Gong__Primary_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Gong Conversations</relationshipLabel>
        <relationshipName>Conversations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gong__Primary_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Gong Conversations</relationshipLabel>
        <relationshipName>Conversations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gong__Primary_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Conversations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gong__Related_Accounts_json__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Related Accounts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gong__Related_Action_Items_json__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Related Action Items</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gong__Related_Agenda_json__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Related Agenda</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gong__Related_Contacts_json__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Related Contacts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gong__Related_Invitees_json__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Related Invitees</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gong__Related_Leads_json__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Related Leads</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gong__Related_Notes_json__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Related Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gong__Related_Opportunities_json__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Related Opportunities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gong__Related_Participants_json__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Related Participants</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gong__Related_Scorecards_json__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Related Scorecards</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gong__Related_Stats_json__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Related Stats</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gong__Related_Topics_json__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Related Topics</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gong__Related_Trackers_json__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Related Trackers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gong__Related_to__c</fullName>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>if( Gong__Contact_1__c  &lt;&gt; Null, 
    HYPERLINK (
       LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) +
            Gong__Contact_1__c ,
        Gong__Contact_1__r.FirstName +  Gong__Contact_1__r.LastName, &apos;_self&apos;</inlineHelpText>
        <label>Related to</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Scope__c</fullName>
        <label>Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gong__System__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>System</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Talk_Time_Them__c</fullName>
        <label>Talk Time Them</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gong__Talk_Time_Us__c</fullName>
        <label>Talk Time Us</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gong__Title__c</fullName>
        <description>Full Conversation title</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Title (Full Conversation Title)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__View_call__c</fullName>
        <formula>HYPERLINK(&quot;https://app.gong.io/call?id=&quot;&amp; Gong__Call_ID__c, &quot;https://app.gong.io/call?id=&quot;&amp; Gong__Call_ID__c ,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__scheduled__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Scheduled</label>
        <type>DateTime</type>
    </fields>
    <label>Conversation</label>
    <listViews>
        <fullName>Gong__All</fullName>
        <columns>NAME</columns>
        <columns>Gong__Primary_Opportunity__c</columns>
        <columns>Gong__Call_Start__c</columns>
        <columns>Gong__Call_Duration__c</columns>
        <columns>Gong__Primary_Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Conversation Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conversations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>